// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component should match snapshot - Any valid Link with always underline: Link snapshot - with always underline 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineAlways NatDSLink-default-1 NatDSLink-default-12 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with body1 variant: Link snapshot - with body1 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-21 MuiTypography-body1 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with body2 variant: Link snapshot - with body2 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-22 MuiTypography-body2 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with button variant: Link snapshot - with button variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-24 MuiTypography-button MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with caption variant: Link snapshot - with caption variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-23 MuiTypography-caption MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with default color: Link snapshot - with default color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-2 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with error color: Link snapshot - with error color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-5 MuiTypography-colorError"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with h1 variant: Link snapshot - with h1 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-13 MuiTypography-h1 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with h2 variant: Link snapshot - with h2 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-14 MuiTypography-h2 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with h3 variant: Link snapshot - with h3 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-15 MuiTypography-h3 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with h4 variant: Link snapshot - with h4 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-16 MuiTypography-h4 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with h5 variant: Link snapshot - with h5 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-17 MuiTypography-h5 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with h6 variant: Link snapshot - with h6 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-18 MuiTypography-h6 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with hover underline: Link snapshot - with hover underline 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-11 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with inherit color: Link snapshot - with inherit color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-4 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with inherit variant: Link snapshot - with inherit variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-26 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with initial color: Link snapshot - with initial color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-3"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with none underline: Link snapshot - with none underline 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineNone NatDSLink-default-1 NatDSLink-default-10 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with overline variant: Link snapshot - with overline variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-25 MuiTypography-overline MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with primary color: Link snapshot - with primary color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-6 MuiTypography-colorPrimary"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with secondary color: Link snapshot - with secondary color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-7 MuiTypography-colorSecondary"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with srOnly variant: Link snapshot - with srOnly variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-27 MuiTypography-srOnly MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with subtitle1 variant: Link snapshot - with subtitle1 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-19 MuiTypography-subtitle1 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with subtitle2 variant: Link snapshot - with subtitle2 variant 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-20 MuiTypography-subtitle2 MuiTypography-colorInherit"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with textPrimary color: Link snapshot - with textPrimary color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-8 MuiTypography-colorTextPrimary"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;

exports[`Link component should match snapshot - Any valid Link with textSecondary color: Link snapshot - with textSecondary color 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-9 MuiTypography-colorTextSecondary"
  onBlur={[Function]}
  onFocus={[Function]}
>
  link
</a>
`;
